--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,13 @@
   "description": "Converts times to Local time",
   "manifest_version": 2,
   "page_action": {
-    "default_title": "My first extension"
+    "default_title": "My first extension",
+    "default_icon": {
+      "16": "icons/time-zone-16.png",
+      "32": "icons/time-zone-32.png",
+      "64": "icons/time-zone-64.png",
+      "128": "icons/time-zone-128.png"
+    }
   },
   "background": {
     "scripts":["background.js"],
@@ -15,5 +21,11 @@
     "activeTab",
     "declarativeContent",
     "https://console.aws.amazon.com/"
-  ]
+  ],
+  "icons": {
+    "16": "icons/time-zone-16.png",
+    "32": "icons/time-zone-32.png",
+    "64": "icons/time-zone-64.png",
+    "128": "icons/time-zone-128.png"
+  }
 }
